# coppeliaSimOPCUA

./: README.md  driveMotor_PLC.ttt  testBoost.cpp  testDrive.ttt  testDrive_PLC.ttt
open62541/: README.md  open62541.c  open62541.h
simExtOpen62541/: CMakeLists.txt  README.md  callbacks.xml  plugin.cpp  variantDeleteTest  variantDeleteTest.cpp
